# lili-bee-jewels-e-commerce-backend

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yaml  manage.py  railway.json  requirements.txt
cart/: models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py
customer/: models.py  serializers.py  urls.py  views.py
customer/migrations/: 0001_initial.py  0002_alter_customer_profile_alter_customer_user.py
lbjec-venv/: pyproject.toml
lbjec_backend/: asgi.py  settings.py  urls.py  wsgi.py
order/: models.py  serializers.py  urls.py  views.py
order/migrations/: 0001_initial.py
product/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_productimage_id.py  0003_product_stock_productoption_stock.py  0004_productmaterial_alter_productattributes_material.py  0005_product_status.py  0006_alter_product_thumbnail_alter_productimage_image_and_more.py
shared/: generic_viewset.py  validators.py
shared/auth/: serializers.py  urls.py
users/: models.py
users/migrations/: 0001_initial.py  0002_customuser_is_customer.py
