[tool.poetry]
name = "lbjec-venv"
version = "0.1.0"
description = ""
authors = ["Lemuel Guevara <lemueljohn.guevara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.1"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.1"
psycopg2-binary = "2.9.6"
python-decouple = "3.8"
django-storages = "1.14.2"
boto3 = "1.34.19"
pillow = "10.2.0"
drf-yasg = "1.21.7"
django-filter = "23.5"
django-cors-headers = "4.3.1"
gunicorn = "22.0.0"
whitenoise = "6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
